kubernetes/prowlarr/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-postgres
  namespace: prowlarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
